update demo4, and found bugs

--- a/src/test_demos/Demo4-Scripted Model Construction.ipynb
+++ b/src/test_demos/Demo4-Scripted Model Construction.ipynb
@@ -28,14 +28,16 @@
     "import pyuppaal\n",
     "from pyuppaal.nta import Template, Location, Edge\n",
     "\n",
-    "pyuppaal.set_verifyta_path(r\"C:\\Users\\Taco\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")"
+    "pyuppaal.set_verifyta_path(r\"C:\\Users\\10262\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Create New Model File with declaration."
+    "## 2. Create New Model File with declaration.\n",
+    "\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_declarations.png width=800 />"
    ]
   },
   {
@@ -59,12 +61,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Construct Receiver Template"
+    "## 3. Construct Receiver Template\n",
+    "\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_receiver.png width=800 />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,12 +135,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Construct Sender Template"
+    "## 4. Construct Sender Template\n",
+    "\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_sender.png width=800 />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +189,70 @@
     "# endregion\n",
     "# endregion 构造templates\n",
     "\n",
-    "umodel.templates = [template0, template1]\n",
+    "umodel.templates = [template0, template1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Set System & Queries, and Verify\n",
+    "\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_systems.png width=800 />\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_queries.png width=800 />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "umodel.verify() results: \n",
+      "Writing example trace to constructed_model-2.xtr\n",
+      "Writing example trace to constructed_model-3.xtr\n",
+      "Writing example trace to constructed_model-4.xtr\n",
+      "Writing counter example to constructed_model-5.xtr\n",
+      "Options for the verification:\n",
+      "  Generating shortest trace\n",
+      "  Search order is breadth first\n",
+      "  Using conservative space optimisation\n",
+      "  Seed is 1713234953\n",
+      "  State space representation uses minimal constraint systems\n",
+      "\u001b[2K\n",
+      "Verifying formula 1 at /nta/queries/query[1]/formula\n",
+      "\u001b[2K -- Formula is NOT satisfied.\n",
+      "\u001b[2K\n",
+      "Verifying formula 2 at /nta/queries/query[2]/formula\n",
+      "\u001b[2K -- Formula is satisfied.\n",
+      "\u001b[2K\n",
+      "Verifying formula 3 at /nta/queries/query[3]/formula\n",
+      "\u001b[2K -- Formula is satisfied.\n",
+      "\u001b[2K\n",
+      "Verifying formula 4 at /nta/queries/query[4]/formula\n",
+      "\u001b[2K -- Formula is satisfied.\n",
+      "\u001b[2K\n",
+      "Verifying formula 5 at /nta/queries/query[5]/formula\n",
+      "\u001b[2K -- Formula is NOT satisfied.\n",
+      "\n",
+      "umodel.easy_verify().untime_pattern: (easy_verify() will only return the trace of the FIRST query.)\n",
+      "['E<> rec.End1']\n",
+      "\n",
+      "State: rec.Start sender.Start count=0 sender_count=0 rec.inv_start=10 rec.guard_start=10 t(0)-rec.t<=0 rec.t-t(0)<=10 \n",
+      "\n",
+      "Transition: rec.t(0) -> rec.t(0) {t; t; t;} \n",
+      "\n",
+      "State: rec._id1 sender.Start count=1 sender_count=0 rec.inv_start=10 rec.guard_start=10 t(0)-rec.t<=-10 rec.t-t(0)<=200 \n",
+      "\n",
+      "Transition: rec._id1 -> rec._id3 {1; 0; 1, 1;} rec.Start -> rec._id1 {t >= guard_start; 0; count++;} \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "umodel.system = \"\"\"// Place template instantiations here.\n",
     "rec = Receiver(a, b, 10, rec_end);\n",
     "sender = Sender(a, b);\n",
@@ -193,19 +262,29 @@
     "                    \"E<> count == 1\",\n",
     "                    \"E<> rec.End1\",\n",
     "                    \"E<> rec.t >= 10\",\n",
-    "                    \"A[] not deadlock\"]"
+    "                    \"A[] not deadlock\"]\n",
+    "print(\"umodel.verify() results: \")\n",
+    "print(umodel.verify())\n",
+    "\n",
+    "print(\"umodel.easy_verify().untime_pattern: (easy_verify() will only return the trace of the FIRST query.)\")\n",
+    "# easy_verify() only aceepts ONE query.\n",
+    "tmp_new_model = umodel.copy_as('tmp_new.xml')\n",
+    "tmp_new_model.queries = \"E<> rec.End1\"\n",
+    "print(tmp_new_model.queries)\n",
+    "print(tmp_new_model.easy_verify(keep_tmp_file=True).raw)\n",
+    "# os.remove('tmp_new.xml')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Check for Correctness"
+    "## 6. Check Correctness"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
