--- a/src/test_demos/Demo4-Scripted Model Construction.ipynb
+++ b/src/test_demos/Demo4-Scripted Model Construction.ipynb
@@ -220,7 +220,7 @@
       "  Generating shortest trace\n",
       "  Search order is breadth first\n",
       "  Using conservative space optimisation\n",
-      "  Seed is 1713234953\n",
+      "  Seed is 1713235051\n",
       "  State space representation uses minimal constraint systems\n",
       "\u001b[2K\n",
       "Verifying formula 1 at /nta/queries/query[1]/formula\n",
@@ -242,12 +242,6 @@
       "['E<> rec.End1']\n",
       "\n",
       "State: rec.Start sender.Start count=0 sender_count=0 rec.inv_start=10 rec.guard_start=10 t(0)-rec.t<=0 rec.t-t(0)<=10 \n",
-      "\n",
-      "Transition: rec.t(0) -> rec.t(0) {t; t; t;} \n",
-      "\n",
-      "State: rec._id1 sender.Start count=1 sender_count=0 rec.inv_start=10 rec.guard_start=10 t(0)-rec.t<=-10 rec.t-t(0)<=200 \n",
-      "\n",
-      "Transition: rec._id1 -> rec._id3 {1; 0; 1, 1;} rec.Start -> rec._id1 {t >= guard_start; 0; count++;} \n",
       "\n"
      ]
     }
@@ -271,7 +265,9 @@
     "tmp_new_model = umodel.copy_as('tmp_new.xml')\n",
     "tmp_new_model.queries = \"E<> rec.End1\"\n",
     "print(tmp_new_model.queries)\n",
-    "print(tmp_new_model.easy_verify(keep_tmp_file=True).raw)\n",
+    "st = tmp_new_model.easy_verify(keep_tmp_file=True).raw\n",
+    "print(st)\n",
+    "# assert last state of st is rec.End1\n",
     "# os.remove('tmp_new.xml')"
    ]
   },
