Update Demo4-Scripted Model Construction.ipynb

--- a/src/test_demos/Demo4-Scripted Model Construction.ipynb
+++ b/src/test_demos/Demo4-Scripted Model Construction.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## 2. Create New Model File with declaration.\n",
     "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_declarations.png width=800 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_declarations.png width=400 />"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "source": [
     "## 3. Construct Receiver Template\n",
     "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_receiver.png width=800 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_receiver.png width=500 />"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "source": [
     "## 4. Construct Sender Template\n",
     "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_sender.png width=800 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_sender.png width=500 />"
    ]
   },
   {
@@ -196,15 +196,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Set System & Queries, and Verify\n",
+    "## 5. Set System and Queries\n",
     "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_systems.png width=800 />\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_queries.png width=800 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_systems.png width=400 />\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_queries.png width=400 />"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "umodel.system = \"\"\"// Place template instantiations here.\n",
+    "rec = Receiver(a, b, 10, rec_end);\n",
+    "sender = Sender(a, b);\n",
+    "// List one or more processes to be composed into a system.\n",
+    "system rec, sender;\\n\"\"\"\n",
+    "umodel.queries = [\"E<> sender_count == 10\",\n",
+    "                    \"E<> count == 1\",\n",
+    "                    \"E<> rec.End1\",\n",
+    "                    \"E<> rec.t >= 10\",\n",
+    "                    \"A[] not deadlock\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Verify and Easy Verify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +245,7 @@
       "  Generating shortest trace\n",
       "  Search order is breadth first\n",
       "  Using conservative space optimisation\n",
-      "  Seed is 1713235051\n",
+      "  Seed is 1713235828\n",
       "  State space representation uses minimal constraint systems\n",
       "\u001b[2K\n",
       "Verifying formula 1 at /nta/queries/query[1]/formula\n",
@@ -242,21 +267,17 @@
       "['E<> rec.End1']\n",
       "\n",
       "State: rec.Start sender.Start count=0 sender_count=0 rec.inv_start=10 rec.guard_start=10 t(0)-rec.t<=0 rec.t-t(0)<=10 \n",
+      "\n",
+      "Transition: rec._id2 -> rec.End2 {1; param2?; t = 888;} \n",
+      "\n",
+      "State: rec._id1 sender.Start count=1 sender_count=0 rec.inv_start=10 rec.guard_start=10 t(0)-rec.t<=-10 rec.t-t(0)<=200 \n",
+      "\n",
+      "Transition: rec._id1 -> rec._id3 {1; 0; 1, 1;} rec.Start -> rec._id1 {t >= guard_start; 0; count++;} \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "umodel.system = \"\"\"// Place template instantiations here.\n",
-    "rec = Receiver(a, b, 10, rec_end);\n",
-    "sender = Sender(a, b);\n",
-    "// List one or more processes to be composed into a system.\n",
-    "system rec, sender;\\n\"\"\"\n",
-    "umodel.queries = [\"E<> sender_count == 10\",\n",
-    "                    \"E<> count == 1\",\n",
-    "                    \"E<> rec.End1\",\n",
-    "                    \"E<> rec.t >= 10\",\n",
-    "                    \"A[] not deadlock\"]\n",
     "print(\"umodel.verify() results: \")\n",
     "print(umodel.verify())\n",
     "\n",
@@ -275,12 +296,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Check Correctness"
+    "## 7. Check Correctness"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
