--- a/src/test_demos/Demo2-Pedestrian.ipynb
+++ b/src/test_demos/Demo2-Pedestrian.ipynb
@@ -40,8 +40,8 @@
      "output_type": "stream",
      "text": [
       "1.2.1\n",
-      "['cCrss', 'pCheckLight', 'pRed', 'pCrss']\n",
-      "['pCheckLight', 'pRed', 'pCrss', 'cCrss']\n"
+      "['pCheckLight', 'pRed', 'pCrss', 'cCrss']\n",
+      "['cCrss', 'pCheckLight', 'pRed', 'pCrss']\n"
      ]
     }
    ],
