--- a/src/test_demos/Demo3-Fault Diagnosis.ipynb
+++ b/src/test_demos/Demo3-Fault Diagnosis.ipynb
@@ -4,51 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo3 - Fault Diagnosis\n",
+    "# Demo3 - Fault Diagnosis and Identification\n",
     "\n",
-    "**Note: we are woking on CAV-2024 tool paper. The documentation will be updated to a structure similar to Demo1-PipeNet before 2024.4.1.**\n",
+    "This demo shows two slightly different automata, `Model_A` and `Model_B`, with observable actions $\\Sigma^o$ = `[a, b, c]`, and unobservable actions $\\Sigma^{un}$ = `[f]`. The following four propositions presented are logically straightforward and easily reasoned, as they are based on a simple example.\n",
     "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/models.jpg width=300 />"
+    "1. Suffix `aaa` implies `f`. For suffix `aaa`, both `Model_A` and `Model_B` identify `f`, as it can only be observed post-occurrence of `f`.\n",
+    "2. Suffix `aba` does not confirm $f$ in `Model_A` The sequence $aba$ can occur during normal and fault conditions in `Model_A`. Therefore, `aba` does not conclusively suggest `f` has occurred.\n",
+    "3. Fault `f` in `Model_A` is not 3-Diagnosable. Given that the observation suffix `aba`, covering three events, occurs in both normal and fault modes of `Model_A`, it's impossible to unequivocally diagnose `f` within this span. Thus, `Model_A` is not 3-diagnosable.\n",
+    "4. Fault `f` in `Model_B` is 3-Diagnosable. In `Model_B`, the three-event suffixes `[abb, bbb]` are exclusive to the normal mode and absent in the fault mode. Conversely, `[aaa, aab, aba, bab, baa, bab]` are unique to the fault mode. The absence of common suffixes between modes in `Model_B` guarantees its 3-diagnosability, ensuring accurate fault identification from any three-event sequence.\n",
+    "\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/diagnosis_identification.png width=400 />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.2.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# setup pyuppaal\n",
     "import pyuppaal\n",
     "from pyuppaal import UModel\n",
     "\n",
     "print(pyuppaal.__version__)\n",
-    "pyuppaal.set_verifyta_path(r\"C:\\Users\\Taco\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")"
+    "pyuppaal.set_verifyta_path(r\"C:\\Users\\10262\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a', 'a', 'a'] can identify 'f'. Model A: True,  Model B: True.\n",
-      "['a', 'b', 'a'] can identify 'f'. Model A: False, Model B: True.\n",
-      "Model A is 3-diagnosable: False, reason: ['c', 'a', 'b', 'a'].\n",
-      "Model B is 3-diagnosable: True.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m_a, m_b = UModel('model_A.xml'), UModel('model_B.xml')\n",
     "sigma_o, sigma_un = ['a', 'b', 'c'], ['f']\n",
@@ -62,10 +48,15 @@
     "res2_b = m_b.fault_identification(o2, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
     "print(f\"{o2} can identify 'f'. Model A: {res2_a[0]}, Model B: {res2_b[0]}.\")\n",
     "# n-diagnosability for fault 'f', for n=3\n",
-    "res_a = m_a.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "res_b = m_b.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "print(f\"Model A is 3-diagnosable: {res_a[0]}, reason: {res_a[1].untime_pattern}.\")\n",
-    "print(f\"Model B is 3-diagnosable: {res_b[0]}.\")"
+    "res2_a = m_a.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
+    "res2_b = m_b.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
+    "print(f\"Model A is 3-diagnosable: {res2_a[0]}, reason: {res2_a[1].untime_pattern}.\")\n",
+    "print(f\"Model B is 3-diagnosable: {res2_b[0]}.\")\n",
+    "\n",
+    "assert res1_a[0] == True\n",
+    "assert res1_b[0] == True\n",
+    "assert res2_a[0] == False\n",
+    "assert res2_b[0] == True"
    ]
   }
  ],
@@ -85,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
