--- a/src/test_demos/Demo1-PipeNet.ipynb
+++ b/src/test_demos/Demo1-PipeNet.ipynb
@@ -32,8 +32,6 @@
    "source": [
     "### 2. Modeling the PipeNet\n",
     "\n",
-    "We have modeled the PipeNet with UPPAAL, you can download the UPPAAL Model: [demo_PipeNet.xml](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_demos/demo_PipeNet.xml).\n",
-    "\n",
     "As shown in the figure below, the guard on the edge is the falling time for each path, e.g., if a ball goes through hidden_path1, it will take `200` to `300` seconds.\n",
     "\n",
     "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetModel.png width=400 />"
@@ -66,7 +64,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "======== untime pattern: ========\n",
       "pattern: ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
+      "\n",
+      "======== detailed parsed trace: ========\n",
       "trace: State [0]: ['PipeNet.Idle', 'Input._id8', 'Observer._id11']\n",
       "global_variables [0]: None\n",
       "Clock_constraints [0]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - PipeNet.t ≤ 0; PipeNet.t - Input.gclk ≤ 0; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - t(0) ≤ 0; ]\n",
@@ -149,7 +150,10 @@
     "# Get one possible trace.\n",
     "# return as `pyuppaal.SimTrace`\n",
     "trace = pipeNet.easy_verify()\n",
+    "print(\"======== untime pattern: ========\")\n",
     "print(\"pattern:\", trace.untime_pattern)\n",
+    "\n",
+    "print(\"\\n======== detailed parsed trace: ========\")\n",
     "print(\"trace:\", trace)"
    ]
   },
