--- a/src/test_demos/Demo2-Pedestrian.ipynb
+++ b/src/test_demos/Demo2-Pedestrian.ipynb
@@ -19,6 +19,7 @@
     "2. As depicted in (b), the interaction dynamics within the scenario can be visualized by utilizing the `UModel.get_communication_graph()` function. \n",
     "3. The pedestrian's behavior (c), including crossing times and compliance with the traffic light, is uncertain. \n",
     "4. To demonstrate the occurrence of multiple safety violations, the scenario is set up such that the car operates solely based on traffic light signals, without considering or detecting the behavior of the pedestrian.\n",
+    "5. Download the model: [pedestrian.xml](https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/pedestrian.xml).\n",
     "\n",
     "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pedestrian_overall.png width=600 />"
    ]
