--- a/src/test_demos/Demo3-Fault Diagnosis.ipynb
+++ b/src/test_demos/Demo3-Fault Diagnosis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,6 +39,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Fault Identification\n",
+    "\n",
+    "Temorary files `tmp_identify_id.xml` will be saved. For more details, please read the docs of [UModel.fault_identification()](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.umodel.UModel.fault_identification).\n",
+    "\n",
+    "1. Suffix `aaa` implies `f`. For suffix `aaa`, both `Model_A` and `Model_B` identify `f`, as it can only be observed post-occurrence of `f`.\n",
+    "2. Suffix `aba` does not confirm $f$ in `Model_A` The sequence $aba$ can occur during normal and fault conditions in `Model_A`. Therefore, `aba` does not conclusively suggest `f` has occurred."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -48,9 +60,7 @@
      "output_type": "stream",
      "text": [
       "['a', 'a', 'a'] can identify 'f'. Model A: True,  Model B: True.\n",
-      "['a', 'b', 'a'] can identify 'f'. Model A: False, Model B: True.\n",
-      "Model A is 3-diagnosable: False, reason: ['c', 'a', 'b', 'a'].\n",
-      "Model B is 3-diagnosable: True.\n"
+      "['a', 'b', 'a'] can identify 'f'. Model A: False, Model B: True.\n"
      ]
     }
    ],
@@ -66,14 +76,45 @@
     "res2_a = m_a.fault_identification(o2, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
     "res2_b = m_b.fault_identification(o2, fault='f', sigma_o=sigma_o, sigma_un=sigma_un)\n",
     "print(f\"{o2} can identify 'f'. Model A: {res2_a[0]}, Model B: {res2_b[0]}.\")\n",
-    "# n-diagnosability for fault 'f', for n=3\n",
-    "res2_a = m_a.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "res2_b = m_b.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
-    "print(f\"Model A is 3-diagnosable: {res2_a[0]}, reason: {res2_a[1].untime_pattern}.\")\n",
-    "print(f\"Model B is 3-diagnosable: {res2_b[0]}.\")\n",
-    "\n",
     "assert res1_a[0] == True\n",
     "assert res1_b[0] == True\n",
+    "assert res2_a[0] == False\n",
+    "assert res2_b[0] == True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Fault Diagnosability\n",
+    "\n",
+    "Temorary files `tmp_diagnosable_suffix_id.xml` will be saved. For more details, please read the docs of [UModel.fault_diagnosability()](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.umodel.UModel.fault_diagnosability).\n",
+    "\n",
+    "1. Fault `f` in `Model_A` is not 3-Diagnosable. Given that the observation suffix `aba`, covering three events, occurs in both normal and fault modes of `Model_A`, it's impossible to unequivocally diagnose `f` within this span. Thus, `Model_A` is not 3-diagnosable.\n",
+    "2. Fault `f` in `Model_B` is 3-Diagnosable. In `Model_B`, the three-event suffixes `[abb, bbb]` are exclusive to the normal mode and absent in the fault mode. Conversely, `[aaa, aab, aba, bab, baa, bab]` are unique to the fault mode. The absence of common suffixes between modes in `Model_B` guarantees its 3-diagnosability, ensuring accurate fault identification from any three-event sequence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model A is 3-diagnosable: False, reason: ['c', 'a', 'b', 'a'].\n",
+      "Model B is 3-diagnosable: True.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# n-diagnosability for fault 'f', for n=3\n",
+    "res3_a = m_a.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
+    "res3_b = m_b.fault_diagnosability(fault='f', n=3, sigma_o=sigma_o, sigma_un=sigma_un)\n",
+    "print(f\"Model A is 3-diagnosable: {res3_a[0]}, reason: {res3_a[1].untime_pattern}.\")\n",
+    "print(f\"Model B is 3-diagnosable: {res3_b[0]}.\")\n",
+    "\n",
     "assert res2_a[0] == False\n",
     "assert res2_b[0] == True"
    ]
