--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -10,12 +10,7 @@
     "[![PyPI version](https://badge.fury.io/py/pyuppaal.svg)](https://badge.fury.io/py/pyuppaal)\n",
     "![](https://img.shields.io/badge/test-passing-brightgreen)\n",
     "[![Licence](https://img.shields.io/github/license/jack0chan/pyuppaal)](https://opensource.org/licenses/mit-license.php)\n",
-    "[![](https://img.shields.io/badge/github-Jack0Chan-blue)](https://github.com/Jack0Chan)\n",
-    "[![](https://img.shields.io/badge/group-HCPS-blue)](https://www.yuque.com/hcps) \n",
-    "\n",
-    "![](https://img.shields.io/badge/platform-Windows-blue) \n",
-    "![](https://img.shields.io/badge/platform-Linux-blue) \n",
-    "![](https://img.shields.io/badge/platform-MacOS-blue)\n",
+    "![](https://img.shields.io/badge/platform-Windows,%20Linux,%20Darwin-blue) \n",
     "\n",
     "\n",
     "\n",
@@ -227,13 +222,18 @@
    "source": [
     "## 5. Get Communication Graph\n",
     "\n",
-    "For models with multiple processes, you can use `umod.get_communication_graph()` method to visualize the sturcture of the model.\n",
+    "For models with multiple processes, you can use `umod.get_communication_graph()` method to visualize the sturcture of your UPPAAL model.\n",
     "\n",
     "An example communication graph of a complex model in [Demo_PipeNet](https://pyuppaal.readthedocs.io/en/latest/Demo1-PipeNet.html#visualize-the-architecture) is shown below:\n",
     "\n",
     "\n",
     "[![](https://mermaid.ink/img/pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8?type=jpg)](https://mermaid.live/edit#pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
