fix the bug of find all patterns

--- a/src/test_demos/Demo5-Trace Parser.ipynb
+++ b/src/test_demos/Demo5-Trace Parser.ipynb
@@ -61,9 +61,9 @@
    "source": [
     "## 2. Construct the Input and Observation events\n",
     "\n",
-    "After sending `sigIn!` to `nodeInput` at time `[0, 50, 100]`, we observed `sigOut!` from `nodeOut` at time `[30, 130]`. `UModel.add_input_monitor()` and `UModel.add_observer_monitor()` will automatically add the constructed monitor into systems. After adding the `inputMonitor` and `observerMonitor` to current model, we get the following figure:\n",
+    "After sending `sigIn!` to `nodeInput` at time point `[0, 50, 100]`, we observed `sigOut!` from `nodeOut` at time point `[30, 130]`. `UModel.add_input_monitor()` and `UModel.add_observer_monitor()` will automatically add the constructed monitor into systems. After adding the `inputMonitor` and `observerMonitor` to current model, we get the following figure:\n",
     "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/npn_monitors.png width=1000 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/npn_monitors.png width=600 />"
    ]
   },
   {
@@ -185,9 +185,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['nodeInput.Refratory', 'path._id0', 'nodeOut._id6', 'inputMonitor._id8', 'observerMonitor._id11']\n",
-      "[t(0) - gclk ≤ 0; t(0) - nodeInput.t ≤ 0; t(0) - path.t ≤ 0; gclk - t(0) ≤ 30; gclk - nodeInput.t ≤ 0; nodeInput.t - path.t ≤ 0; path.t - gclk ≤ 0; ]\n",
-      "sigOut: nodeOut -> observerMonitor; nodeOut._id6 -> nodeOut._id5; observerMonitor._id11 -> observerMonitor._id12;\n",
+      "states: ['nodeInput.Refratory', 'path._id0', 'nodeOut._id6', 'inputMonitor._id8', 'observerMonitor._id11']\n",
+      "clock constraints: [t(0) - gclk ≤ 0; t(0) - nodeInput.t ≤ 0; t(0) - path.t ≤ 0; gclk - t(0) ≤ 30; gclk - nodeInput.t ≤ 0; nodeInput.t - path.t ≤ 0; path.t - gclk ≤ 0; ]\n",
+      "transitions: sigOut: nodeOut -> observerMonitor; nodeOut._id6 -> nodeOut._id5; observerMonitor._id11 -> observerMonitor._id12;\n",
       "\n",
       "======== Analysis ========\n",
       "We can infer that `0<=path.t<=30` from the following clock constraints:\n",
@@ -198,9 +198,9 @@
     }
    ],
    "source": [
-    "print(st.states[3])\n",
-    "print(st.clock_constraints[3])\n",
-    "print(st.transitions[3])\n",
+    "print(f\"states: {st.states[3]}\")\n",
+    "print(f\"clock constraints: {st.clock_constraints[3]}\")\n",
+    "print(f\"transitions: {st.transitions[3]}\")\n",
     "\n",
     "print(\"\\n======== Analysis ========\")\n",
     "print(\"We can infer that `0<=path.t<=30` from the following clock constraints:\")\n",
@@ -228,9 +228,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['nodeInput.Refratory', 'path._id0', 'nodeOut._id5', 'inputMonitor._id9', 'observerMonitor._id12']\n",
-      "[t(0) - gclk ≤ -50; t(0) - nodeInput.t ≤ 0; t(0) - path.t ≤ 0; gclk - t(0) ≤ 100; gclk - nodeInput.t ≤ 0; nodeInput.t - path.t ≤ 0; path.t - gclk ≤ 0; ]\n",
-      "None: nodeInput -> nodeInput; nodeInput.Refratory -> nodeInput._id2;\n",
+      "states: ['nodeInput.Refratory', 'path._id0', 'nodeOut._id5', 'inputMonitor._id9', 'observerMonitor._id12']\n",
+      "clock constraints: [t(0) - gclk ≤ -50; t(0) - nodeInput.t ≤ 0; t(0) - path.t ≤ 0; gclk - t(0) ≤ 100; gclk - nodeInput.t ≤ 0; nodeInput.t - path.t ≤ 0; path.t - gclk ≤ 0; ]\n",
+      "transitions: None: nodeInput -> nodeInput; nodeInput.Refratory -> nodeInput._id2;\n",
       "\n",
       "======== Analysis ========\n",
       "We can infer that `50<=nodeInput.t<=100` from the following clock constraints:\n",
@@ -242,9 +242,9 @@
     }
    ],
    "source": [
-    "print(st.states[5])\n",
-    "print(st.clock_constraints[5])\n",
-    "print(st.transitions[5])\n",
+    "print(f\"states: {st.states[5]}\")\n",
+    "print(f\"clock constraints: {st.clock_constraints[5]}\")\n",
+    "print(f\"transitions: {st.transitions[5]}\")\n",
     "\n",
     "print(\"\\n======== Analysis ========\")\n",
     "print(\"We can infer that `50<=nodeInput.t<=100` from the following clock constraints:\")\n",
