--- a/src/test_demos/Demo1-PipeNet.ipynb
+++ b/src/test_demos/Demo1-PipeNet.ipynb
@@ -70,52 +70,52 @@
       "======== detailed parsed trace: ========\n",
       "trace: State [0]: ['PipeNet.Idle', 'Input._id8', 'Observer._id11']\n",
       "global_variables [0]: None\n",
-      "Clock_constraints [0]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - PipeNet.t ≤ 0; PipeNet.t - Input.gclk ≤ 0; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - t(0) ≤ 0; ]\n",
+      "Clock_constraints [0]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; gclk - PipeNet.t ≤ 0; PipeNet.t - t(0) ≤ 0; ]\n",
       "transitions [0]: input_ball: Input -> PipeNet; Input._id8 -> Input._id9; PipeNet.Idle -> PipeNet.Cross1;\n",
       "-----------------------------------\n",
       "State [1]: ['PipeNet.Cross1', 'Input._id9', 'Observer._id11']\n",
       "global_variables [1]: None\n",
-      "Clock_constraints [1]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - t(0) ≤ 500; gclk - PipeNet.t ≤ 0; PipeNet.t - Input.gclk ≤ 0; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - gclk ≤ 0; ]\n",
+      "Clock_constraints [1]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; gclk - t(0) ≤ 500; gclk - PipeNet.t ≤ 0; PipeNet.t - gclk ≤ 0; ]\n",
       "transitions [1]: hidden_path1: PipeNet -> ; PipeNet.Cross1 -> PipeNet.Cross2;\n",
       "-----------------------------------\n",
       "State [2]: ['PipeNet.Cross2', 'Input._id9', 'Observer._id11']\n",
       "global_variables [2]: None\n",
-      "Clock_constraints [2]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - t(0) ≤ 500; gclk - PipeNet.t ≤ 300; gclk - Input.gclk ≤ 0; PipeNet.t - gclk ≤ -200; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - gclk ≤ 0; ]\n",
+      "Clock_constraints [2]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; gclk - t(0) ≤ 500; gclk - PipeNet.t ≤ 300; PipeNet.t - gclk ≤ -200; ]\n",
       "transitions [2]: hidden_path3: PipeNet -> ; PipeNet.Cross2 -> PipeNet.Exit1;\n",
       "-----------------------------------\n",
       "State [3]: ['PipeNet.Exit1', 'Input._id9', 'Observer._id11']\n",
       "global_variables [3]: None\n",
-      "Clock_constraints [3]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ -200; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - t(0) ≤ 500; gclk - Input.gclk ≤ 0; PipeNet.t - gclk ≤ -200; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - gclk ≤ 0; ]\n",
+      "Clock_constraints [3]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ -200; gclk - t(0) ≤ 500; PipeNet.t - gclk ≤ -200; ]\n",
       "transitions [3]: exit1: PipeNet -> Observer; PipeNet.Exit1 -> PipeNet.Reset; Observer._id11 -> Observer._id12;\n",
       "-----------------------------------\n",
       "State [4]: ['PipeNet.Reset', 'Input._id9', 'Observer._id12']\n",
       "global_variables [4]: None\n",
-      "Clock_constraints [4]: [t(0) - gclk ≤ -500; t(0) - PipeNet.t ≤ -200; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - Input.gclk ≤ 0; PipeNet.t - t(0) ≤ 300; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - t(0) ≤ 500; ]\n",
+      "Clock_constraints [4]: [t(0) - gclk ≤ -500; t(0) - PipeNet.t ≤ -200; gclk - t(0) ≤ 500; PipeNet.t - t(0) ≤ 300; ]\n",
       "transitions [4]: None: PipeNet -> PipeNet; PipeNet.Reset -> PipeNet.Idle;\n",
       "-----------------------------------\n",
       "State [5]: ['PipeNet.Idle', 'Input._id9', 'Observer._id12']\n",
       "global_variables [5]: None\n",
-      "Clock_constraints [5]: [t(0) - gclk ≤ -500; t(0) - PipeNet.t ≤ 0; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - t(0) ≤ 1000; gclk - PipeNet.t ≤ 300; gclk - Input.gclk ≤ 0; PipeNet.t - gclk ≤ -200; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - gclk ≤ 0; ]\n",
+      "Clock_constraints [5]: [t(0) - gclk ≤ -500; t(0) - PipeNet.t ≤ 0; gclk - t(0) ≤ 1000; gclk - PipeNet.t ≤ 300; PipeNet.t - gclk ≤ -200; ]\n",
       "transitions [5]: input_ball: Input -> PipeNet; Input._id9 -> Input.pass; PipeNet.Idle -> PipeNet.Cross1;\n",
       "-----------------------------------\n",
       "State [6]: ['PipeNet.Cross1', 'Input.pass', 'Observer._id12']\n",
       "global_variables [6]: None\n",
-      "Clock_constraints [6]: [t(0) - gclk ≤ -1000; t(0) - PipeNet.t ≤ 0; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - t(0) ≤ 1550; gclk - PipeNet.t ≤ 1000; PipeNet.t - Input.gclk ≤ -1000; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - gclk ≤ 0; ]\n",
+      "Clock_constraints [6]: [t(0) - gclk ≤ -1000; t(0) - PipeNet.t ≤ 0; gclk - t(0) ≤ 1550; gclk - PipeNet.t ≤ 1000; PipeNet.t - gclk ≤ -1000; ]\n",
       "transitions [6]: hidden_path1: PipeNet -> ; PipeNet.Cross1 -> PipeNet.Cross2;\n",
       "-----------------------------------\n",
       "State [7]: ['PipeNet.Cross2', 'Input.pass', 'Observer._id12']\n",
       "global_variables [7]: None\n",
-      "Clock_constraints [7]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - t(0) ≤ 1550; gclk - PipeNet.t ≤ 1300; gclk - Input.gclk ≤ 0; PipeNet.t - gclk ≤ -1200; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - gclk ≤ 0; ]\n",
+      "Clock_constraints [7]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; gclk - t(0) ≤ 1550; gclk - PipeNet.t ≤ 1300; PipeNet.t - gclk ≤ -1200; ]\n",
       "transitions [7]: hidden_path4: PipeNet -> ; PipeNet.Cross2 -> PipeNet.Exit2;\n",
       "-----------------------------------\n",
       "State [8]: ['PipeNet.Exit2', 'Input.pass', 'Observer._id12']\n",
       "global_variables [8]: None\n",
-      "Clock_constraints [8]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ -200; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - t(0) ≤ 1550; gclk - PipeNet.t ≤ 1300; gclk - Input.gclk ≤ 0; PipeNet.t - t(0) ≤ 300; PipeNet.t - gclk ≤ -1200; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - gclk ≤ 0; ]\n",
+      "Clock_constraints [8]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ -200; gclk - t(0) ≤ 1550; gclk - PipeNet.t ≤ 1300; PipeNet.t - t(0) ≤ 300; PipeNet.t - gclk ≤ -1200; ]\n",
       "transitions [8]: exit2: PipeNet -> Observer; PipeNet.Exit2 -> PipeNet.Reset; Observer._id12 -> Observer.pass;\n",
       "-----------------------------------\n",
       "State [9]: ['PipeNet.Reset', 'Input.pass', 'Observer.pass']\n",
       "global_variables [9]: None\n",
-      "Clock_constraints [9]: [t(0) - gclk ≤ -1550; t(0) - PipeNet.t ≤ -250; t(0) - Input.gclk ≤ 0; t(0) - Observer.gclk ≤ 0; gclk - Input.gclk ≤ 0; PipeNet.t - t(0) ≤ 300; Input.gclk - Observer.gclk ≤ 0; Observer.gclk - t(0) ≤ 1550; ]\n",
+      "Clock_constraints [9]: [t(0) - gclk ≤ -1550; t(0) - PipeNet.t ≤ -250; gclk - t(0) ≤ 1550; PipeNet.t - t(0) ≤ 300; ]\n",
       "\n"
      ]
     }
@@ -134,16 +134,16 @@
     "pipeNet = pipeNet.save_as(\"demo_PipeNet_new.xml\")\n",
     "\n",
     "# Define the input. (action_name, lower bound(guard), upper bound(invariant))\n",
-    "inputs = [('input_ball', 'gclk>=0', 'gclk<=0'), ('input_ball', 'gclk>=1000', 'gclk<=1000')]\n",
+    "inputs = [('input_ball!', 'gclk>=0', 'gclk<=0'), ('input_ball!', 'gclk>=1000', 'gclk<=1000')]\n",
     "# Define the observation. (action_name, lower bound(guard), upper bound(invariant))\n",
-    "observations = [('exit1', 'gclk>=500', 'gclk<=500'), ('exit2', 'gclk>=1550', 'gclk<=1550')]\n",
+    "observations = [('exit1?', 'gclk>=500', 'gclk<=500'), ('exit2?', 'gclk>=1550', 'gclk<=1550')]\n",
     "# Add input template.\n",
     "pipeNet.add_input_monitor(inputs)\n",
     "\n",
-    "# Focused Actions is xxxxxxxxx(if this comment is not completed, please report the issue :>, thanks)\n",
-    "fc = ['exit1', 'exit2', 'exit3']\n",
+    "# observable actions\n",
+    "sigma_o = ['exit1', 'exit2', 'exit3']\n",
     "# Add observation template.\n",
-    "pipeNet.add_observer_monitor(observations, focused_actions=fc)\n",
+    "pipeNet.add_observer_monitor(observations, sigma_o=sigma_o)\n",
     "\n",
     "# Query whether the model can simulate the inputs & observations\n",
     "pipeNet.queries = 'E<> Observer.pass'\n",
