--- a/src/test_demos/Demo5-Trace Parser.ipynb
+++ b/src/test_demos/Demo5-Trace Parser.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Demo5 - Trace Parser\n",
     "\n",
-    "In this demo, you will learn how to model the `input` and `observations` events of a descrete event system (DES), and how to parse the counter example.\n",
+    "In this demo, you will learn how to model the `input` and `observations` events of a descrete event system (DES), and how to extract information from parsed counter example.\n",
     "\n",
     "This demo shows a Node-Path-Node model: [NPNModel.xml](https://github.com/Jack0Chan/PyUPPAAL/tree/main/src/test_demos/NPNModel.xml), and the input node can accept input, and send it to output node via the path, where\n",
     "\n",
