--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -12,30 +12,59 @@
     "[![Licence](https://img.shields.io/github/license/jack0chan/pyuppaal)](https://opensource.org/licenses/mit-license.php)\n",
     "![](https://img.shields.io/badge/platform-Windows,%20Linux,%20Darwin-blue) \n",
     "\n",
+    "`PyUPPAAL` is a python package developed basically for reflecting UPPAAL's model editing, verification, and counter-example parsing operations into scripts. \n",
     "\n",
+    "Notice: \n",
     "\n",
-    "`PyUPPAAL` is a research tool that helps you do most things that you can do with UPPAAL GUI. Basic coding flow is:\n",
-    "\n",
-    "1. load a `.xml` model, just like you open a model in UPPAAL GUI;\n",
-    "2. set the query, just like you edit the queries in UPPAAL GUI;\n",
-    "3. verify a model with the query and options (e.g., shortest path), just like you click the \"Verify\" button in UPPAAL GUI.\n",
-    "\n",
-    "In addition to the above functions, you can also\n",
-    "\n",
-    "- load a `.xtr` trace, and get the formatted trace data as [SimTrace](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.tracer.SimTrace);\n",
-    "- modify NTA of UPPAAL xml model, including templates, systems, and queries, etc. ([Example](https://pyuppaal.readthedocs.io/en/latest/Demo4-Scripted%20Model%20Construction.html));\n",
-    "- add built-in templates such as Input, Observer, and other monitors in class [Template](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.nta.Template);\n",
-    "- find all patterns of the model with certain query with [find_all_patterns](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.umodel.UModel.find_all_patterns) method;\n",
-    "- common problem solutions, such as , [fault_identification](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.umodel.UModel.fault_identification), [fault_diagnosability](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.umodel.UModel.fault_diagnosability), and [fault_tolerance](https://pyuppaal.readthedocs.io/en/latest/USER%20API.html#pyuppaal.umodel.UModel.fault_tolerance);\n",
-    "- [todo] analyze the *SMC* simulation results.\n",
-    "\n",
-    "Demos are provided to help understand how `PyUPPAAL` can contribute to scientific research:\n",
-    "\n",
-    "1. [Demo - PipeNet (find_all_patterns)](https://pyuppaal.readthedocs.io/en/latest/Demo1-PipeNet.html)\n",
-    "2. [Demo - Pedestrian (find_all_patterns)](https://pyuppaal.readthedocs.io/en/latest/Demo2-Pedestrian.html)\n",
-    "3. [Demo - Fault Diagnosis (fault_diagnosability, fault_identification)](https://pyuppaal.readthedocs.io/en/latest/Demo3-Fault%20Diagnosis.html)\n",
-    "4. [Demo - Scripted Model Construction (pyuppaal.nta)](https://pyuppaal.readthedocs.io/en/latest/Demo4-Scripted%20Model%20Construction.html)\n",
-    "5. [Demo - Trace Parser (pyuppaal.SimTrace)](https://pyuppaal.readthedocs.io/en/latest/Demo5-Trace%20Parser.html)"
+    "- report issues / requirements at: [github-issues](https://github.com/Jack0Chan/PyUPPAAL/issues)\n",
+    "- more demos for basic & advanced usage will come soon.\n",
+    "- [todo] Support for *SMC* analyzing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Demos are provided to help users get familiar with `PyUPPAAL`:\n",
+    "<div style=\"display: flex; flex-wrap: wrap; align-items: flex-start;\">\n",
+    "    <div style=\"margin: 10px; width: 300px;\">\n",
+    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pipeNetPatterns.png\" style=\"width: 100%; height: 200px; object-fit: cover;\">\n",
+    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo1-PipeNet.ipynb\">Demo-PipeNet</a></h5>\n",
+    "        <p style=\"margin: 0; font-size: 14px;\">This demo demonstrates how to</p>\n",
+    "        <ol style=\"margin: 0; padding-left: 20px; font-size: 14px;\">\n",
+    "            <li>Load and verify a model.</li>\n",
+    "            <li>Model the input & observation sequence.</li>\n",
+    "            <li>Build communication graph.</li>\n",
+    "            <li>Find all patterns.</li>\n",
+    "        </ol>\n",
+    "    </div>\n",
+    "    <div style=\"margin: 10px; width: 300px;\">\n",
+    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/scripted_model_building_receiver.png\" style=\"width: 100%; height: 200px; object-fit: cover;\" alt=\"描述2\">\n",
+    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo4-Scripted%20Model%20Construction.ipynb\">Demo-Scripted Model Construction</a></h5>\n",
+    "        <p style=\"margin: 0; font-size: 14px;\">This demo constructs a model solely with PyUPPAAL APIs, including:</p>\n",
+    "        <ol style=\"margin: 0; padding-left: 20px; font-size: 14px;\">\n",
+    "            <li>Construct <code>Template</code> with <code>Edge</code>, <code>Location</code>.</li>\n",
+    "            <li>Set <code>Declarations</code>, <code>Systems</code>, <code>Queries</code>.</li>\n",
+    "            <li>Verify the constructed model.</li>\n",
+    "        </ol>\n",
+    "    </div>\n",
+    "    <div style=\"margin: 10px; width: 300px;\">\n",
+    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/pedestrian_overall.png\" style=\"width: 100%; height: 200px; object-fit: cover;\" alt=\"描述3\">\n",
+    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo2-Pedestrian.ipynb\">Demo-Pedestrain</a></h5>\n",
+    "        <p style=\"margin: 0; font-size: 14px;\">This demo shows how to identify all event sequences that could result in a fault state, and see you can get ALL possible patterns only with PyUPPAAL <code>find_all_patterns()</code>.</p>\n",
+    "    </div>\n",
+    "    <div style=\"margin: 10px; width: 300px;\">\n",
+    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/npn_monitors.png\" style=\"width: 100%; height: 200px; object-fit: cover;\" alt=\"描述3\">\n",
+    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo5-Trace%20Parser.ipynb\">Demo-Trace Parser</a></h5>\n",
+    "        <p style=\"margin: 0; font-size: 14px; font-size: 14px;\">In this demo, you will learn how to model the <code>input</code> and <code>observations</code> events of a descrete event system (DES), and how to extract information from parsed counter example.</p>\n",
+    "    </div>\n",
+    "    <div style=\"margin: 10px; width: 300px;\">\n",
+    "        <img src=\"https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/diagnosis_identification.png\" style=\"width: 100%; height: 200px; object-fit: cover;\" alt=\"描述3\">\n",
+    "        <h5 style=\"margin: 0 0 4px 0; font-size: 14px;\"><a href=\"https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo3-Fault%20Diagnosis.ipynb\">Demo-Fault Identification and Diagnosability</a></h5>\n",
+    "        <p style=\"margin: 0; font-size: 14px;\">In this demo, you will analyze the identification and diagnosability of certain fault, wich advanced methods of <code>pyuppaal</code>.</p>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n"
    ]
   },
   {
@@ -50,91 +79,50 @@
     "\n",
     "## 2. Before Coding\n",
     "\n",
-    "Remember to set the `verifyta_path` in your first line of code.\n",
+    "Be sure to set the `verifyta_path` in your first line of code, which serves as model checking engine: [Download UPPAAL4.x/5.x](https://uppaal.org/downloads/).\n",
     "\n",
-    "`pyuppaal.set_verifyta_path(\"your/path/to/verifyta.exe\")`\n"
+    "`pyuppaal.set_verifyta_path(\"your/path/to//verifyta.exe\")`\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 3. Load, Edit, and Verify a Model\n",
     "\n",
-    "## 3. Verify a Model\n",
-    "\n",
-    "Lets take the following model P1 with query `A[] not deadlock` as the example. You can download this file via [this_link].\n",
+    "1. Firstly we load the model [demo.xml](https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/demo.xml) shown below. \n",
+    "2. Then you can verify, and return the verify results as terminal outputs, or parsed SimTrace.\n",
+    "3. In this demo, we just edit the `queries` of the `.xml` model, and we also provide a demo showing how to edit the template, locations, edges, etc.: [Demo-Scripted Model Construction](https://github.com/Jack0Chan/PyUPPAAL/blob/main/src/test_demos/Demo4-Scripted%20Model%20Construction.ipynb).\n",
     "\n",
     "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/demo.png width=250 />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2.0\n",
+      "pyuppaal version: 1.2.1\n",
+      "\n",
+      "======== terminal res ========\n",
       "Writing example trace to demo-1.xtr\n",
       "Options for the verification:\n",
       "  Generating shortest trace\n",
       "  Search order is breadth first\n",
       "  Using conservative space optimisation\n",
-      "  Seed is 1705648037\n",
+      "  Seed is 1713320425\n",
       "  State space representation uses minimal constraint systems\n",
       "\u001b[2K\n",
       "Verifying formula 1 at /nta/queries/query[1]/formula\n",
       "\u001b[2K -- Formula is satisfied.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pyuppaal as pyu\n",
-    "\n",
-    "print(pyu.__version__)\n",
-    "# set verifyta path\n",
-    "pyu.set_verifyta_path(r\"C:\\Users\\Taco\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")\n",
-    "\n",
-    "demo_path = 'demo.xml'\n",
-    "\n",
-    "# verify and return the terminal result\n",
-    "terminal_res = pyu.Verifyta().verify(demo_path)\n",
-    "print(terminal_res)\n",
-    "\n",
-    "# another method\n",
-    "umod = pyu.UModel(demo_path)\n",
-    "umod_res = umod.verify()\n",
-    "\n",
-    "assert terminal_res == umod_res"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also edit the model and get all possible patterns that satisfy the query.\n",
-    "\n",
-    "The red line is pattern1, and the green line is pattern2.\n",
-    "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/demo_patterns.png width=250 />"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "broadcast channels:  ['a', 'b', 'd', 'c']\n",
-      "queries:  ['E<> P1.pass']\n",
       "\n",
-      " State [0]: ['P1.start']\n",
+      "======== parsed res ========\n",
+      "untime pattern: ['a', 'b']\n",
+      "full trace: State [0]: ['P1.start']\n",
       "global_variables [0]: None\n",
       "Clock_constraints [0]: [t(0) - P1.t ≤ 0; P1.t - t(0) ≤ 10; ]\n",
       "transitions [0]: a: P1 -> ; P1.start -> P1._id2;\n",
@@ -147,26 +135,58 @@
       "State [2]: ['P1.pass']\n",
       "global_variables [2]: None\n",
       "Clock_constraints [2]: [t(0) - P1.t ≤ -10; ]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyuppaal\n",
+    "from pyuppaal import UModel\n",
+    "\n",
+    "print(f\"pyuppaal version: {pyuppaal.__version__}\\n\")\n",
+    "pyuppaal.set_verifyta_path(r\"C:\\Users\\10262\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")\n",
+    "\n",
+    "umodel = UModel('demo.xml') # load the model\n",
+    "umodel.queries = ['E<> P1.pass']\n",
+    "\n",
+    "# verify and return the terminal result.\n",
+    "print(f\"======== terminal res ========\\n{umodel.verify()}\")\n",
+    "\n",
+    "# verify and return the parsed trace as simulation trace: SimTrace.\n",
+    "simulation_trace = umodel.easy_verify() \n",
+    "print(\"======== parsed res ========\") \n",
+    "print(f\"untime pattern: {simulation_trace.untime_pattern}\")\n",
+    "print(f\"full trace: {simulation_trace}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Find all patterns\n",
+    "\n",
+    "Now we want find all possible patterns that leads to `P1.pass`. The red line is pattern1, and the green line is pattern2.\n",
+    "\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_demos/figs/demo_patterns.png width=250 />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "pattern1:  ['a', 'b']\n",
       "pattern2:  ['c', 'd']\n"
      ]
     }
    ],
    "source": [
-    "# save as a new file because find_all_patterns will modify the file\n",
-    "umod = umod.save_as('demo_new.xml')\n",
-    "# set the queries of the xml model.\n",
-    "umod.queries ='E<> P1.pass'\n",
-    "\n",
-    "print(\"broadcast channels: \", umod.broadcast_chan)\n",
-    "print(\"queries: \", umod.queries)\n",
-    "# get one trace\n",
-    "print('\\n', umod.easy_verify())\n",
-    "# find all patterns\n",
-    "all_patterns = umod.find_all_patterns()\n",
-    "for i, pattern in enumerate(all_patterns):\n",
-    "    print(f'pattern{i+1}: ', pattern.untime_pattern)\n"
+    "for i, st in enumerate(umodel.find_all_patterns()):\n",
+    "    print(f'pattern{i+1}: ', st.untime_pattern)"
    ]
   },
   {
@@ -178,16 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2.0\n",
-      "Verify with for loop, time usage 8.57197093963623\n",
-      "Verify with multi-threads, time usage 1.5158562660217285\n"
+      "1.2.1\n",
+      "Verify with for loop, time usage 8.181004762649536\n",
+      "Verify with multi-threads, time usage 1.4765398502349854\n"
      ]
     }
    ],
@@ -198,7 +218,7 @@
     "\n",
     "print(pyu.__version__)\n",
     "# set verifyta path\n",
-    "pyu.set_verifyta_path(r\"C:\\Users\\Taco\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")\n",
+    "pyu.set_verifyta_path(r\"C:\\Users\\10262\\Documents\\GitHub\\cav2024\\bin\\uppaal64-4.1.26\\bin-Windows\\verifyta.exe\")\n",
     "\n",
     "model_path_list = ['demo.xml', 'demo_new.xml'] * 100\n",
     "trace_path_list = ['demo_trace.xtr', 'demo_new_grace.xtr'] * 100\n",
@@ -229,11 +249,6 @@
     "\n",
     "[![](https://mermaid.ink/img/pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8?type=jpg)](https://mermaid.live/edit#pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -252,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.19"
   },
   "vscode": {
    "interpreter": {
