--- a/src/test_demos/Doc_Readme.ipynb
+++ b/src/test_demos/Doc_Readme.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Notice: \n",
     "\n",
-    "- report issues / requirements at: [github-issues](https://github.com/Jack0Chan/PyUPPAAL/issues)\n",
+    "- report issues / requirements at: [github-issues](https://github.com/Jack0Chan/PyUPPAAL/issues).\n",
     "- more demos for basic & advanced usage will come soon.\n",
     "- [todo] Support for *SMC* analyzing."
    ]
